--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <h2 class="text-2xl font-bold text-gray-700 dark:text-white mb-4 border-b-2 border-blue-600 pb-1">Projects</h2>
             <div class="grid md:grid-cols-2 gap-6">
                 <div class="bg-gray-50 dark:bg-gray-700 rounded-lg shadow-sm overflow-hidden flex flex-col project-card transition-colors duration-300">
-                    <img src="http://googleusercontent.com/image_generation_content/0" alt="Ceremonyy.com" class="w-full h-48 object-cover">
+                    <img src="images/ceremonyy.png" alt="Ceremonyy.com" class="w-full h-48 object-cover">
                     <div class="p-4 flex-1">
                         <h3 class="text-xl font-bold text-gray-800 dark:text-gray-200">Ceremonyy.com</h3>
                         <p class="text-sm text-gray-600 dark:text-gray-400 mt-2">
