--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             font-family: 'Inter', sans-serif;
             scroll-behavior: smooth;
         }
-        html {
-            scroll-padding-top: 6rem;
-        }
+        section[id] {
+            scroll-margin-top: 6rem;
+        }
         body.dark {
             background-color: #1a202c;
             color: #e2e8f0;
