--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
             font-family: 'Inter', sans-serif;
             scroll-behavior: smooth;
         }
-        section[id] {
-            scroll-margin-top: 6rem;
-        }
         body.dark {
             background-color: #1a202c;
             color: #e2e8f0;
@@ -91,6 +88,9 @@
         }
         body.dark #navbar {
             background-color: rgba(45, 55, 72, 0.8);
+        }
+        section {
+            scroll-margin-top: 5rem;
         }
     </style>
 </head>
