--- a/index.html
+++ b/index.html
@@ -92,13 +92,17 @@
         section {
             scroll-margin-top: 5rem;
         }
+        /* Mobile-first adjustments for small screens */
+        .project-card img {
+            height: 12rem; /* Reduced height for smaller screens */
+        }
     </style>
 </head>
 <body class="bg-gray-100 transition-colors duration-300">
     <nav id="navbar" class="sticky top-0 z-50 shadow-md p-4 transition-colors duration-300">
         <div class="max-w-5xl mx-auto flex justify-between items-center">
             <a href="#" class="text-2xl font-bold text-gray-800 dark:text-white">Aishwarya</a>
-            <div class="space-x-4">
+            <div class="hidden md:flex space-x-4">
                 <a href="#about" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300">About</a>
                 <a href="#skills" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300">Skills</a>
                 <a href="#projects" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300">Projects</a>
@@ -108,24 +112,35 @@
                 <svg id="moon-icon" class="h-6 w-6 block dark:hidden" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
                 <svg id="sun-icon" class="h-6 w-6 hidden dark:block" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" /></svg>
             </button>
+            <div class="md:hidden">
+                <button id="mobile-menu-btn" class="text-gray-800 dark:text-white p-2">
+                    <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
+                </button>
+            </div>
+        </div>
+        <div id="mobile-menu" class="hidden md:hidden w-full text-center mt-4 space-y-2">
+            <a href="#about" class="block py-2 text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300">About</a>
+            <a href="#skills" class="block py-2 text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300">Skills</a>
+            <a href="#projects" class="block py-2 text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300">Projects</a>
+            <a href="#contact" class="block py-2 text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300">Contact</a>
         </div>
     </nav>
     
-    <main class="max-w-5xl mx-auto p-8 md:p-12 lg:p-16">
+    <main class="max-w-5xl mx-auto p-4 md:p-8 lg:p-12">
         <section id="about" class="bg-white dark:bg-gray-800 shadow-lg rounded-xl mb-8 p-6 md:p-12 flex flex-col md:flex-row items-center md:items-start transition-colors duration-300">
             <div class="md:w-1/3 flex justify-center mb-6 md:mb-0">
                 <img id="profile-image" src="https://media.licdn.com/dms/image/v2/D5603AQGHImoUh8JRCQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1720377357681?e=1758153600&v=beta&t=pdnIkEhwIeZSf51EMeDKya8jGP1lVQ2EPb58rZV4FWQ" alt="Aishwarya Shantinath Kamat" class="w-48 h-48 rounded-full shadow-lg object-cover">
             </div>
             <div class="md:w-2/3 md:ml-8 text-center md:text-left">
-                <h1 class="text-4xl font-bold text-gray-800 dark:text-white tracking-wide">Hi, I'm Aishwarya S. Kamat</h1>
-                <div class="text-xl text-blue-600 dark:text-blue-400 mt-2 font-semibold">
+                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 dark:text-white tracking-wide">Hi, I'm Aishwarya S. Kamat</h1>
+                <div class="text-lg md:text-xl text-blue-600 dark:text-blue-400 mt-2 font-semibold">
                     <span id="typing-text" class="typing"></span>
                 </div>
-                <p class="text-gray-700 dark:text-gray-300 mt-4 leading-relaxed">
+                <p class="text-gray-700 dark:text-gray-300 mt-4 leading-relaxed text-sm md:text-base">
                     Results-driven software developer with strong expertise in <span class="keyword-highlight">Laravel</span>, <span class="keyword-highlight">PHP</span>, <span class="keyword-highlight">SQL</span>, <span class="keyword-highlight">JavaScript</span>, and <span class="keyword-highlight">jQuery</span>, complemented by hands-on experience in building scalable web applications and business management systems. Skilled in creating efficient solutions for complex workflows, integrating <span class="keyword-highlight">third-party APIs</span>, and delivering high-quality, user-friendly products. Passionate about leveraging <span class="keyword-highlight">AI</span> and advanced technologies to create impactful, data-driven applications.
                 </p>
                 <div class="mt-6 flex flex-col md:flex-row items-center justify-center md:justify-start space-y-4 md:space-y-0 md:space-x-4">
-                    <a href="#" download class="bg-blue-600 text-white font-bold py-3 px-6 rounded-full hover:bg-blue-700 transition-colors duration-300">
+                    <a href="aishwaryakamat_2025_resume.pdf" download class="bg-blue-600 text-white font-bold py-3 px-6 rounded-full hover:bg-blue-700 transition-colors duration-300">
                         Download Resume
                     </a>
                 </div>
@@ -178,7 +193,7 @@
 
         <section id="projects" class="bg-white dark:bg-gray-800 shadow-lg rounded-xl p-8 md:p-12 mb-8 transition-colors duration-300">
             <h2 class="text-2xl font-bold text-gray-700 dark:text-white mb-4 border-b-2 border-blue-600 pb-1">Projects</h2>
-            <div class="grid md:grid-cols-2 gap-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <div class="bg-gray-50 dark:bg-gray-700 rounded-lg shadow-sm overflow-hidden flex flex-col project-card transition-colors duration-300">
                     <img src="images/ceremonyy.png" alt="Ceremonyy.com" class="w-full h-48 object-cover">
                     <div class="p-4 flex-1">
@@ -236,7 +251,7 @@
 
         <section id="contact" class="bg-white dark:bg-gray-800 shadow-lg rounded-xl p-8 md:p-12 transition-colors duration-300">
             <h2 class="text-2xl font-bold text-gray-700 dark:text-white mb-4 border-b-2 border-blue-600 pb-1">Get in Touch</h2>
-            <div class="grid md:grid-cols-2 gap-8 text-sm text-gray-700 dark:text-gray-300">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 text-sm text-gray-700 dark:text-gray-300">
                 <div>
                     <h3 class="text-lg font-bold text-gray-800 dark:text-gray-200 mb-2">Contact Details</h3>
                     <p class="mt-2"><strong>Address:</strong> Kolhapur, India</p>
@@ -249,9 +264,7 @@
                         <a href="https://linkedin.com/in/aishwarya-kamat-03" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 transition-colors duration-300">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="currentColor"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.76s.784-1.76 1.75-1.76c.968 0 1.752.79 1.752 1.76s-.784 1.76-1.752 1.76zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                         </a>
-                        <a href="PLACEHOLDER_GITHUB_LINK" class="text-gray-600 dark:text-gray-400 hover:text-blue-600 transition-colors duration-300">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="currentColor"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.046.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.772.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.605.801.576 4.765-1.589 8.197-6.094 8.197-11.386 0-6.627-5.373-12-12-12z"/></svg>
-                        </a>
+                       
                     </div>
                 </div>
             </div>
@@ -310,6 +323,14 @@
         onTopBtn.addEventListener('click', () => {
             document.body.scrollTop = 0;
             document.documentElement.scrollTop = 0;
+        });
+
+        // Mobile menu toggle
+        const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+
+        mobileMenuBtn.addEventListener('click', () => {
+            mobileMenu.classList.toggle('hidden');
         });
 
         // Typing effect
