--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 </div>
                 
                 <div class="bg-gray-50 dark:bg-gray-700 rounded-lg shadow-sm overflow-hidden flex flex-col project-card transition-colors duration-300">
-                    <img src="http://googleusercontent.com/image_generation_content/1" alt="Veerbhadra - Textile Industry Automation Platform" class="w-full h-48 object-cover">
+                    <img src="images/veerbhadra.png" alt="Veerbhadra - Textile Industry Automation Platform" class="w-full h-48 object-cover">
                     <div class="p-4 flex-1">
                         <h3 class="text-xl font-bold text-gray-800 dark:text-gray-200">Veerbhadra - Textile Industry Automation Platform</h3>
                         <p class="text-sm text-gray-600 dark:text-gray-400 mt-2">
@@ -215,7 +215,7 @@
                 </div>
 
                 <div class="bg-gray-50 dark:bg-gray-700 rounded-lg shadow-sm overflow-hidden flex flex-col project-card transition-colors duration-300">
-                    <img src="http://googleusercontent.com/image_generation_content/2" alt="Octans Business Management Software" class="w-full h-48 object-cover">
+                    <img src="images/octans.png" alt="Octans Business Management Software" class="w-full h-48 object-cover">
                     <div class="p-4 flex-1">
                         <h3 class="text-xl font-bold text-gray-800 dark:text-gray-200">Octans Business Management Software</h3>
                         <p class="text-sm text-gray-600 dark:text-gray-400 mt-2">
@@ -225,7 +225,7 @@
                 </div>
 
                 <div class="bg-gray-50 dark:bg-gray-700 rounded-lg shadow-sm overflow-hidden flex flex-col project-card transition-colors duration-300">
-                    <img src="https://via.placeholder.com/400x250" alt="MyBackup" class="w-full h-48 object-cover">
+                    <img src="images/backup.png" alt="MyBackup" class="w-full h-48 object-cover">
                     <div class="p-4 flex-1">
                         <h3 class="text-xl font-bold text-gray-800 dark:text-gray-200">MyBackup</h3>
                         <p class="text-sm text-gray-600 dark:text-gray-400 mt-2">
@@ -235,7 +235,7 @@
                 </div>
 
                 <div class="bg-gray-50 dark:bg-gray-700 rounded-lg shadow-sm overflow-hidden flex flex-col project-card transition-colors duration-300">
-                    <img src="https://via.placeholder.com/400x250" alt="Pure Elements" class="w-full h-48 object-cover">
+                    <img src="images/pureelements.png" alt="Pure Elements" class="w-full h-48 object-cover">
                     <div class="p-4 flex-1">
                         <h3 class="text-xl font-bold text-gray-800 dark:text-gray-200">Pure Elements</h3>
                         <p class="text-sm text-gray-600 dark:text-gray-400 mt-2">
